se editó en mobile la lista de episodios

--- a/index.html
+++ b/index.html
@@ -22,43 +22,45 @@
                 Un podcast que explora el mundo de la programación. Nuevos
                 episodios, todos los jueves cada 15 días.
             </p>
-            <button>Conocé más</button>
+            <a href="#episodios" class="boton-deg">Conocé más</a>
         </header>
-        <main>
-            <h1 class="mainTitle">Episodios</h1>
-            <div>
-                <iframe
-                    src="https://open.spotify.com/embed/episode/5a2wFLTXtoPHIfmsd0tlBD"
-                    width="100%"
-                    height="232"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allow="encrypted-media"
-                ></iframe>
-                <iframe
-                    src="https://open.spotify.com/embed/episode/2gKNevErDRRcOxE3cqDcs5"
-                    width="100%"
-                    height="232"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allow="encrypted-media"
-                ></iframe>
-                <iframe
-                    src="https://open.spotify.com/embed/episode/0bUuzPL59TzTOR0kUQASH8"
-                    width="100%"
-                    height="232"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allow="encrypted-media"
-                ></iframe>
-                <iframe
-                    src="https://open.spotify.com/embed/episode/7ccjoW123ukcSUkPEdbxnZ?theme=0"
-                    width="100%"
-                    height="232"
-                    frameborder="0"
-                    allowtransparency="true"
-                    allow="encrypted-media"
-                ></iframe>
+        <main id="episodios" class="episodios">
+            <div class="container">
+                <h1 class="mainTitle text-white">Episodios</h1>
+                <div class="episodios__content">
+                    <iframe
+                        src="https://open.spotify.com/embed/episode/5a2wFLTXtoPHIfmsd0tlBD"
+                        width="100%"
+                        height="232"
+                        frameborder="0"
+                        allowtransparency="true"
+                        allow="encrypted-media"
+                    ></iframe>
+                    <iframe
+                        src="https://open.spotify.com/embed/episode/2gKNevErDRRcOxE3cqDcs5"
+                        width="100%"
+                        height="232"
+                        frameborder="0"
+                        allowtransparency="true"
+                        allow="encrypted-media"
+                    ></iframe>
+                    <iframe
+                        src="https://open.spotify.com/embed/episode/0bUuzPL59TzTOR0kUQASH8"
+                        width="100%"
+                        height="232"
+                        frameborder="0"
+                        allowtransparency="true"
+                        allow="encrypted-media"
+                    ></iframe>
+                    <iframe
+                        src="https://open.spotify.com/embed/episode/7ccjoW123ukcSUkPEdbxnZ?theme=0"
+                        width="100%"
+                        height="232"
+                        frameborder="0"
+                        allowtransparency="true"
+                        allow="encrypted-media"
+                    ></iframe>
+                </div>
             </div>
         </main>
         <section>
