ajustando padding superior en el contenedor del header

--- a/index.html
+++ b/index.html
@@ -182,19 +182,19 @@
                 <p class="parrafo">© 2020— Hello blue pale dot</p>
             </div>
             <div class="redes">
-                <a href="https://www.spotify.com/">
+                <a href="https://www.spotify.com/" target="_blank">
                     <i class="fab fa-spotify" aria-hidden="true"></i>
                 </a>
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/" target="_blank">
                     <i class="fab fa-instagram" aria-hidden="true"></i>
                 </a>
-                <a href="https://twitter.com/">
+                <a href="https://twitter.com/" target="_blank">
                     <i class="fab fa-twitter" aria-hidden="true"></i>
                 </a>
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/" target="_blank">
                     <i class="fab fa-facebook" aria-hidden="true"></i>
                 </a>
-                <a href="https://telegram.org/">
+                <a href="https://telegram.org/" target="_blank">
                     <i class="fab fa-telegram" aria-hidden="true"></i>
                 </a>
             </div>
