se modificó el p bajo el figure para obtener coherencia semántica en la etiqueta HTML y se reemplazó por figcaption

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- importando FontAwesome -->
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
             integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
             crossorigin="anonymous"
+        />
+        <link
+            rel="shortcut icon"
+            href="./assets/logo.svg"
+            type="image/x-icon"
         />
         <link rel="stylesheet" href="./styles/style.css" />
         <title>Sprint 1 | Podcast</title>
@@ -43,7 +49,7 @@
         </header>
         <main id="episodios" class="episodios">
             <div class="episodios">
-                <h1 class="container mainTitle text-white">Episodios</h1>
+                <h2 class="container mainTitle text-white">Episodios</h2>
                 <div class="episodios__content">
                     <iframe
                         src="https://open.spotify.com/embed/episode/5a2wFLTXtoPHIfmsd0tlBD"
@@ -92,7 +98,7 @@
                 />
             </figure>
             <div class="nosotros__content">
-                <h1 class="mainTitle">De dónde venimos</h1>
+                <h2 class="mainTitle">De dónde venimos</h2>
                 <p class="parrafo">
                     Our posturings, our imagined self-importance, the delusion
                     that we have some privileged position in the Universe, are
@@ -107,7 +113,7 @@
             </div>
         </section>
         <section id="entrevistas" class="entrevistas">
-            <h1 class="mainTitle container">Invitadas/os estelares</h1>
+            <h2 class="mainTitle container">Invitadas/os estelares</h2>
             <div class="entrevistas__grillas">
                 <img
                     src="./assets/grace-hopper.png"
@@ -133,7 +139,7 @@
             </div>
         </section>
         <section id="topicos" class="topicos container">
-            <h1 class="mainTitle">Algunos de nuestros temas</h1>
+            <h2 class="mainTitle">Algunos de nuestros temas</h2>
             <div class="topicos__content">
                 <div class="topicos__detail">
                     <figure>
@@ -141,8 +147,8 @@
                             src="./assets/icon1.svg"
                             alt="Icono de archivos externos descargándose en un disco duro"
                         />
+                        <figcaption>Trabajo remoto</figcaption>
                     </figure>
-                    <p>Trabajo remoto</p>
                 </div>
                 <div class="topicos__detail">
                     <figure>
@@ -150,8 +156,8 @@
                             src="./assets/icon2.svg"
                             alt="Icono de un rostro en perfil recibiendo información al cerebro"
                         />
+                        <figcaption>Repensando la programación</figcaption>
                     </figure>
-                    <p>Repensando la programación</p>
                 </div>
                 <div class="topicos__detail">
                     <figure>
@@ -159,8 +165,8 @@
                             src="./assets/icon3.svg"
                             alt="Icono de una computadora mostrando un código de programación"
                         />
+                        <figcaption>Bases del código</figcaption>
                     </figure>
-                    <p>Bases del código</p>
                 </div>
                 <div class="topicos__detail">
                     <figure>
@@ -168,13 +174,13 @@
                             src="./assets/icon4.svg"
                             alt="Icono de una red que envuelve a la base de datos de una computadora"
                         />
+                        <figcaption>Seguridad informática</figcaption>
                     </figure>
-                    <p>Seguridad informática</p>
                 </div>
             </div>
         </section>
         <section class="novedadesContainer">
-            <h1 class="mainTitle text-white">¿Querés las últimas novedades?</h1>
+            <h2 class="mainTitle text-white">¿Querés las últimas novedades?</h2>
             <a href="#episodios" class="boton-deg">Escuchá los episodios</a>
         </section>
         <footer class="footer container">
